--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set-option -sa terminal-features ",screen-256color:RGB"
 set -s escape-time 50
 
 set -g mouse on
