--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -36,6 +36,7 @@
         }
     },
     "breadcrumbs.enabled": false,
+    "editor.lineNumbers": "relative",
     "vim.leader": "<Space>",
     "vim.hlsearch": false,
     "vim.insertModeKeyBindings": [
@@ -47,6 +48,8 @@
     "vim.normalModeKeyBindingsNonRecursive": [
         { "before": ["<S-h>"], "commands": [":bprevious"] },
         { "before": ["<S-l>"], "commands": [":bnext"] },
+        { "before": ["<C-f>"], "after": ["<C-f>", "z", "z"] },
+        { "before": ["<C-b>"], "after": ["<C-b>", "z", "z"] },
 
         { "before": ["leader", "w"], "commands": [":w!"] },
         { "before": ["leader", "q"], "commands": [":q!"] },
@@ -70,9 +73,16 @@
             "commands": ["editor.action.showDefinitionPreviewHover"]
         }
     ],
+
+    "vim.visualModeKeyBindings": [
+        { "before": ["<"], "commands": ["editor.action.outdentLines"] },
+        { "before": [">"], "commands": ["editor.action.indentLines"] },
+        { "before": ["J"], "commands": ["editor.action.moveLinesDownAction"] },
+        { "before": ["K"], "commands": ["editor.action.moveLinesUpAction"] },
+        { "before": ["leader", "c"], "commands": ["editor.action.commentLine"] }
+    ],  
     "vim.handleKeys": {
-        "<C-a>": false,
-        "<C-f>": false
+        "<C-a>": false
     },
     "gitlens.codeLens.authors.enabled": false,
     "gitlens.codeLens.recentChange.enabled": false,
