--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -15,7 +15,7 @@ truncation_length = 8
 
 [git_branch]
 format = '[$branch(:$remote_branch)]($style)'
-style = "green"
+style = "purple"
 
 [git_status]
 format = '([$all_status$ahead_behind]($style)) '
